postfwd (1.10pre7c-3) unstable; urgency=low

  * implement machine-interpretable copyright file

 -- Jan Wagner <waja@cyconet.org>  Sun, 20 Jul 2008 13:27:42 +0200

postfwd (1.10pre7c-2) unstable; urgency=low

  * Uploading to unstable.
  * Updating standards version to 3.8.0, no changes needed

 -- Jan Wagner <waja@cyconet.org>  Tue, 15 Jul 2008 22:43:08 +0200

postfwd (1.10pre7c-1) experimental; urgency=low

  * Initial release (Closes: #470356).

 -- Jan Wagner <waja@cyconet.org>  Sat, 31 May 2008 22:07:08 +0200