@@ -1,6 +1,11 @@
 postfwd (1.10pre7c-3) unstable; urgency=low
 
   * implement machine-interpretable copyright file
+  * fix init script
+    - let daemon write pid file for his own
+    - point start-stop daemon to pidfile when stoping
+    - fix reload by fixing the way how to get the pid
+  * fix example-cfg2.txt to work with 1.10pre7
 
  -- Jan Wagner <waja@cyconet.org>  Sun, 20 Jul 2008 13:27:42 +0200
 
